testsuite/tests/safeHaskell/safeInfered/UnsafeInfered01.stderr

UnsafeInfered01.hs:5:1: error: [GHC-44360]
    UnsafeInfered01_A: Can't be safely imported!
    The module itself isn't safe.
